12-note

(C:\Users\takeuchihirotomo\Anaconda3) C:\Users\takeuchihirotomo>python
Python 3.6.0 |Anaconda 4.3.1 (64-bit)| (default, Dec 23 2016, 11:57:41) [MSC v.1900 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import turtle
>>> turtle = turtle.Turtle()
>>> turtle.position()
(0.00,0.00)
>>> turtle.home()
>>> turtle.clear()
>>> turtle.forward(200)
>>> turtle.left(120)
>>> turtle.forward(200)
>>> turtle.left(120)
>>> turtle.forward(200)
>>>
>>> turtle.home()
>>> turtle.clear()
>>>
>>> for i in range(3):
...   turtle.forward(200)
...   turtle.left(120)
...
>>>
>>>
>>> turtle.home()
>>> turtle.clear()
>>>
>>> for i in range(4):
...   turtle.forward(100)
...   turtle.left(90)
...
>>>
>>>
>>> turtle.home()
>>> turtle.clear()
>>>
>>> for i in range(4):
...   for x in range(4):
...   turtle.forward(100)
  File "<stdin>", line 3
    turtle.forward(100)
         ^
IndentationError: expected an indented block
>>>   turtle.left(90)
  File "<stdin>", line 1
    turtle.left(90)
    ^
IndentationError: unexpected indent
>>>
... print('hello')
hello
>>>
>>> for i in range(4):
...   for x in range(4):
...   turtle.forward(100)
  File "<stdin>", line 3
    turtle.forward(100)
         ^
IndentationError: expected an indented block
>>>   turtle.left(90)
  File "<stdin>", line 1
    turtle.left(90)
    ^
IndentationError: unexpected indent
>>>
>>> turtle.home()
>>> turtle.clear()
>>>
>>> for i in range(4):
...  turtle.forward(20)
...   for x in range(4):
  File "<stdin>", line 3
    for x in range(4):
    ^
IndentationError: unexpected indent
>>>    turtle.forward(100)
  File "<stdin>", line 1
    turtle.forward(100)
    ^
IndentationError: unexpected indent
>>>    turtle.left(90)
  File "<stdin>", line 1
    turtle.left(90)
    ^
IndentationError: unexpected indent
>>>   turtle.left(-90)
  File "<stdin>", line 1
    turtle.left(-90)
    ^
IndentationError: unexpected indent
>>>
>>>   turtle.left(-90)
  File "<stdin>", line 1
    turtle.left(-90)
    ^
IndentationError: unexpected indent
>>>
>>> turtle.home()
>>> turtle.clear()
>>>
>>> for i in range(4):
...   turtle.up()
...   turtle.forward(20)
...   turtle.down()
...   for x in range(4):
...     turtle.forward(100)
...     turtle.left(90)
...   turtle.left(-90)
...
>>>
>>>
>>>
